ok final commit now, trying to fix the heart button so that it stays aligned. was acting goofy on my phone

--- a/code/src/components/happyThoughts.css
+++ b/code/src/components/happyThoughts.css
@@ -38,8 +38,8 @@
 }
 
 .heart {
-  margin-left: 1.2px;
-  margin-right: 1.2px;
+  margin-left: 1px;
+  margin-top: 1px;
   font-size: 22px;
 }
 
